--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "element-ui": "^2.7.2",
+    "marked": "^0.6.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
